@@ -1,0 +1,45 @@
+//
+// C++ Interface: ListHolder
+//
+// Description: 
+//
+//
+// Author: Erik Hjortsberg <erik@katastrof.nu>, (C) 2006
+//
+// This program is free software; you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 2 of the License, or
+// (at your option) any later version.
+// 
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+// 
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software
+// Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.//
+//
+
+namespace EmberOgre {
+
+/**
+@author Erik Hjortsberg
+*/
+class ListHolder {
+public:
+    ListHolder(CEGUI::Listbox* listbox, CEGUI::Editbox* filterEditbox);
+
+    ~ListHolder();
+    
+	void addItem(CEGUI::ListboxItem* item);
+	void insertItem(CEGUI::ListboxItem* item, const CEGUI::ListboxItem* position);
+	void removeItem(const CEGUI::ListboxItem* item);
+//	void updateItems();
+	void resetList();
+	
+};
+
+}
+
+#endif
