@@ -1,3 +1,8 @@
+2006-04-11 Erik Hjortsberg  <erik@katastrof.nu>
+
+    * src/components/ogre/widgets/TerrainEditor.lua, src/components/ogre/TerrainEditor.cpp, src/components/ogre/TerrainEditor.h: added undo and redo feature
+    * src/components/ogre/scripting/bindings/lua/EntityWorldPickListener.pkg, src/components/ogre/scripting/bindings/lua/ListHolder.pkg, src/components/ogre/scripting/bindings/lua/TerrainEditor.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp: updated bindings
+
 2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>
 
     * src/components/ogre/TerrainEditor.cpp, src/components/ogre/TerrainEditor.h: 
